mainnet.gno.land/extracted/r/moul/x/daily/escrow/v0/README.md
# Escrow

> ⚠️ **Experimental — generated with no human supervision.** This realm was
> produced automatically by an MCP-driven agent to exercise the gno MCP server
> and tooling, and to generate test content for gno compilers, linters and
> formatters. **Not audited. Not for production.** Full context & folder README:
> [r/moul/x/daily](https://github.com/moul/gno-contracts/blob/main/r/moul/x/daily/README.md)

---


A minimal 2-party escrow realm for gno.land (a port of the classic Solidity escrow
idea, accounting only — no funds move). One party opens a deal against a
counterparty with free-form terms; both parties confirm to settle it, and the
creator can cancel any deal that is still open.

**Realm path:** `gno.land/r/REPLACE_ADDR/escrow`

## Example calls

```
# Alice opens a deal with Bob; returns the new deal id (e.g. 0)
Create(g1bob..., "swap NFT for 100 GNOT")

# Each party confirms; when both have confirmed, the deal becomes "Settled"
Confirm(0)   # called by Alice
Confirm(0)   # called by Bob -> Settled

# The creator may cancel while the deal is still Open
Cancel(0)    # called by Alice
```

## Read (Render)

- `/` — table of all deals: id, parties, state, confirmations, terms.
- `/<id>` — details for a single deal (e.g. `/0`).

<!-- BEGIN GNOCONTRACTS FOOTER (generated by `make readmes`; do not edit below) -->

---

Part of **[moul/gno-contracts](https://github.com/moul/gno-contracts)** — moul's versioned gno.land contracts. See the repository for the full catalog, build/test tooling, and usage.

**Dependency graph:**

![gno.land/r/moul/x/daily/escrow/v0 dependency graph](https://raw.githubusercontent.com/moul/gno-contracts/main/_assets/gno.land/r/moul/x/daily/escrow/v0/deps.png)

> 🧪 **Highly experimental — potentially vibe-coded.** Not audited; may break, change, or be removed at any time. Do not use with anything of value. Full disclaimer: [DISCLAIMER](https://github.com/moul/gno-contracts/blob/main/DISCLAIMER.md).

<!-- END GNOCONTRACTS FOOTER -->
